# distributed-apps

homework-01/: ReadMe.md  build.gradle  credentials.properties  deploy.sh  manifest.yml  settings.gradle
homework-02/: ReadMe.md  deploy.sh  external.js  manifest-manual.yml  manifest-x2faas.yml  manual.js  nqueens.js  package-lock.json  package.json
homework-03/: ReadMe.md  deploy.sh  manifest.yml  nqueens.yml  reduction.rb  workers.js
homework-04/: ReadMe.md  deploy.sh  input.json  manifest.yml  nqueens.yml  package-lock.json  package.json  reduction.rb
homework-05/: ReadMe.md  bench.rb  deploy.sh  fractionMonolithFT.js  fractionMonolithGiven.js  input.json  manifest.yml  nqueens.yml  run.sh  (+1 more)
homework-07/scheduler/: Cargo.toml
homework-07/scheduler/src/: afcl.rs  main.rs  sql.rs
project/: .env.example  .gitignore  Cargo.toml  Dockerfile  ReadMe.md  build.rs  build_js_functions.sh  build_rust_function.sh  build_rust_functions.sh  deploy.sh  deploy_rust_function.sh  ibm.tf  input.json  package-lock.json  package.json  run.sh  stock-fc-cfcl.yml  stock-fc.yml  terraform.tfvars.example  tsconfig.json  webpack.config.js
project/src/: amazon_forecast_schema.json  amazon_forecast_target_schema.json  create-chart.ts  create_chart.rs  fetch-prices.ts  fetch_prices.rs  fetch_prices.ts  forecast.rs  forecast.ts  ibm.rs  macros.rs  process-result.ts  process_result.rs  shared.rs  shared.ts  stock_data.rs
project/tex/: .gitignore  .latexmkrc  DPSbachelor.cls  Makefile  aspell.en_GB.pws  beamerthemeuibk.sty  presentation.tex  report.tex
project/tex/report/: abstract.tex  appendix.tex  challenges.tex  conclusion.tex  evaluation.tex  introduction.tex  solution.tex
(+14 files in other folders)
