[package]
name = "fetch-prices"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[[bin]]
name = "fetch_prices"
path = "src/fetch_prices.rs"

[[bin]]
name = "forecast"
path = "src/forecast.rs"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde-aux = "2.0.0"
