[package]
name = "fetch-prices"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[[bin]]
name = "fetch_prices"
path = "src/fetch_prices.rs"

[[bin]]
name = "forecast"
path = "src/forecast.rs"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
serde-aux = "2.0.0"
dotenv_codegen = "0.15.0"
rust-s3 = "0.26.4"
rusoto_core = "0.45.0"
rusoto_credential = "0.45.0"
rusoto_forecast = "0.45.0"
csv = "1.1.3"
reqwest = "0.10.8"
rusoto_forecastquery = { version = "0.45.0", features = ["deserialize_structs", "serialize_structs"] }
