[package]
name = "scheduler"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
petgraph = "0.5"
serde_yaml = "0.8"
serde = "1.0"
anyhow = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.4.2", features = ["mysql", "runtime-async-std-rustls"] }
async-std = { version = "1.9", features = [ "attributes" ] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.12"
